--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,36 +4,43 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 6rem;
-
+    
         &-links {
             display: flex;
             flex: 1;
-            justify-content: flex-start;
+            justify-content: space-between;
             align-items: center;
 
             &_logo{
                 margin-right: 2rem;
+                display: flex;
 
                 & img{
-                    width: 62px;
-                    height: 16px;
+                    height: 40px;
+                    
                 }
             }
 
             &_container {
                 display: flex;
                 flex-direction: row;
+                margin-right: 6rem;
 
                 & p {
                     color: #fff;
                     font-family: var(--font-family);
-                    font-weight: 500;
-                    font-size: 18px;
+                    font-weight: 300;
+                    font-size: 26px;
                     line-height: 25px;
                     text-transform: capitalize;
                     margin: 0 1rem;
                     cursor: pointer;
+
+                    &:hover {
+                        color: black;
+                        font-weight: 600;
+                        text-shadow: 0px 0px 4px rgba(207, 206, 206, 0.973);
+                    }
                 }
             }
         }
@@ -53,7 +60,8 @@
                 align-items: flex-end;
                 flex-direction: column;
                 text-align: end;
-                background: var(--color-footer);
+                background: var(--color-menu);
+                backdrop-filter: blur(5px);
                 padding: 2rem;
                 position: absolute;
                 top: 40px;
@@ -99,11 +107,7 @@
     .page {
         &__navbar {
             padding: 2rem 3rem;
-            &-menu{
-                &_container{
-                   // right: -30px;
-                }
-            }
+            
         }
     }    
 }
