--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
 
 :root {
-    --font-family: 'Manrope', sans-serif;
+    --font-family: 'Rajdhani', sans-serif;
+    --font-header: 'Amatic SC', cursive;
 
     --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
     --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
 
     --color-bg: #301729;
-    --color-footer : #1A0F1A;
+    --color-footer : #1A0F1A ;
     --color-blog: #042c54;
-    --color-text: #81AFDD;
-    --color-subtext: #FF8A71;
+    --color-text: #fdfff1;
+    --color-subtext: hsl(0, 0%, 100%);
+    --color-menu: rgba(255, 255, 255, 0.6);
 }
