About, Projects, Contact page
Set up basic About page, Project page with carousel and Contact page with contact form using EmailJs. Added footer.

--- a/src/containers/about/about.scss
+++ b/src/containers/about/about.scss
@@ -1,8 +1,55 @@
-.page {
-    &__about {
-        & h1 {
-            font-size: 64px;
-            padding: 30rem 0;
+.about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: var(--font-family);
+    background-color: var(--color-bgdown);
+    
+    &__tittle {
+        margin: 1rem 0;
+        font-size: 46px;
+        color: var(--color-text);
+    }
+    
+    &__box{
+        display: flex;
+        flex-wrap: wrap;
+        background-color: var(--color-bgup);
+        border-radius: 30px;
+        filter: drop-shadow(0 5px 20px var(--color-blue));
+        //box-shadow: 0 0 20px var(--color-blue);
+        font-size: 30px;
+        color: var(--color-subtext);
+        margin: 1rem 0;
+        padding: 2rem 2rem;
+
+        &_info {
+            flex: 2;
+            text-align: start;
+            text-align: justify;
+            padding: 4rem;
+            padding-right: 6rem;
+        }
+        
+        &_image {
+            flex: 1;
+            text-align: center;
+            height: 600px;
+
+            img {
+                height: 600px;
+            }
+        }
+
+        &_skills {
+            flex: 2;
+            text-align: end;
+            padding: 4rem;
+
+            ul {
+                list-style-type: none;
+            }
+            
         }
     }
 }
