--- a/src/index.scss
+++ b/src/index.scss
@@ -17,4 +17,9 @@
     --color-text: #fdfff1;
     --color-subtext: hsl(0, 0%, 100%);
     --color-menu: rgba(255, 255, 255, 0.6);
+
+    --color-blue: #4b14f6;
+
+    --color-bgup: #360a16;
+    --color-bgdown: #281428;
 }
