--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,15 @@
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
 }
-
+/*
+.App{
+    background-repeat: no-repeat;
+}
+*/
 body {
     background: var(--color-bg);
     letter-spacing: 1px;
@@ -14,7 +19,7 @@ a {
     color: unset;
     text-decoration: none;
 }
-
+/*
 .gradient__bg {
     background:-moz-radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
     background:-webkit-radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
@@ -22,7 +27,7 @@ a {
     background:-ms-radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
     background:radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
 }
-
+*/
 .gradient__text {
     background: var(--gradient-text);
     background-clip: text;
@@ -32,7 +37,7 @@ a {
 
 .section {
     &--padding {
-        padding: 4rem 8rem;
+        padding: 2rem 10rem;
     }
 }
 
@@ -98,18 +103,18 @@ a {
 }
 
 body::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(51, 51, 51, 0.26);
+	-webkit-box-shadow: inset 0 0 6px rgba(37, 37, 37, 0.5);
 	border-radius: 20px;
-	background-color: #00000000;
+	background-color: #281428;
 }
 
 body::-webkit-scrollbar {
 	width: 14px;
-	background-color: #0000000e;
+	background-color: #00000000;
 }
 
 body::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.616);
-	background-color: #2b030ece;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+	background-color: #4c14f671;
 }
