--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--color-bgup);
     
         &-links {
             display: flex;
@@ -24,7 +25,7 @@
             &_container {
                 display: flex;
                 flex-direction: row;
-                margin-right: 6rem;
+                margin-right: 4rem;
 
                 & p {
                     color: #fff;
@@ -37,9 +38,9 @@
                     cursor: pointer;
 
                     &:hover {
-                        color: black;
-                        font-weight: 600;
-                        text-shadow: 0px 0px 4px rgba(207, 206, 206, 0.973);
+                        color: rgba(255, 255, 255, 0.795);
+                        font-weight: 500;
+                        text-shadow: 6px 6px 6px ;
                     }
                 }
             }
@@ -84,6 +85,7 @@
                 }
             }
         }
+
     }
 }
 
