--- a/src/App.scss
+++ b/src/App.scss
@@ -11,28 +11,13 @@
 }
 */
 body {
-    background: var(--color-bg);
+    background: var(--color-accent);
     letter-spacing: 1px;
 } 
 
 a {
     color: unset;
     text-decoration: none;
-}
-/*
-.gradient__bg {
-    background:-moz-radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
-    background:-webkit-radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
-    background:-o-radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
-    background:-ms-radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
-    background:radial-gradient(circle at 10% 0%, rgba(80, 17, 17, 0.99) 0%, rgba(40, 20, 40, 1) 100%);
-}
-*/
-.gradient__text {
-    background: var(--gradient-text);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 
 .section {
@@ -41,15 +26,39 @@ a {
     }
 }
 
+@media screen and (max-width: 1336px){
+    .section {
+        &--padding {
+            padding: 2rem 7rem;
+        }
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .section {
+        &--padding {
+            padding: 3rem 5rem;
+        }
+    }
+}
+
+@media screen and (max-width: 768px){
+    .section {
+        &--padding {
+            padding: 1rem 2rem;
+        }
+    }
+}
+
 .scale-up-center {
-	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	        animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 @-webkit-keyframes scale-up-center {
     0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);
     }
     100% {
     -webkit-transform: scale(1);
@@ -86,35 +95,20 @@ a {
     }
 }
 
-@media screen and (max-width: 700px){
-    .section {
-        &__padding {
-            padding: 4rem;
-        }
-    }
-}
-
-@media screen and (max-width: 550px){
-    .section {
-        &__padding {
-            padding: 4rem 2rem;
-        }
-    }
-}
 
 body::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(37, 37, 37, 0.5);
 	border-radius: 20px;
-	background-color: #281428;
+	background-color: var(--color-accent);
 }
 
 body::-webkit-scrollbar {
-	width: 14px;
-	background-color: #00000000;
+	width: 0.8rem;
+	background-color: var(--color-dark);
 }
 
 body::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-	background-color: #4c14f671;
+	-webkit-box-shadow: inset 0 0 6px rgba(126, 126, 126, 0.2);
+	background-color: var(--color-dark);
 }
