--- a/src/components/navigation/nav.scss
+++ b/src/components/navigation/nav.scss
@@ -21,12 +21,13 @@
                 cursor: pointer;
                 text-decoration: none;
                 margin: 1rem;
-                background-color: var(--color-blue);
+                background-color: var(--color-bright);
                 border-radius: 30px;
+                box-shadow: 2px 3px 5px var(--color-light);
 
                 &:hover {
-                    background-color: black;
-                    box-shadow: 0 5px 10px #4c14f6d3;
+                    background-color: var(--color-dark);
+                    box-shadow: 0 5px 10px var(--color-bright);
                     
                     .navigation__list_item-popup {
                         visibility: visible;
@@ -46,10 +47,35 @@
                 width: 90px;
                 text-align: center;
                 border-radius: 30px;
-                box-shadow: 0 5px 10px #4c14f6d3;
-                background-color: black;
-                color: var(--color-text);
+                box-shadow: 0 5px 10px var(--color-bright);
+                background-color: var(--color-dark);
+                color: var(--color-light);
                 transition: transform 1s cubic-bezier(0.58,-0.78, 0, 1.79);
+            }
+        }
+    }
+
+    @media screen and (max-width: 768px){
+        top: 2%;
+        left: 45%;
+        width: 50px;
+
+        &__list {
+            flex-direction: row;
+
+            &_item {
+                &-popup {
+                    top: 0;
+                    left: -25px;
+                }
+
+                a {
+                    &:hover {
+                        .navigation__list_item-popup {
+                            transform: translateY(70%);
+                        }
+                    }
+                }
             }
         }
     }
