--- a/src/containers/contacts/contacts.scss
+++ b/src/containers/contacts/contacts.scss
@@ -1,41 +1,54 @@
 .contacts {
     height: 100vh;
     position: relative;
-    background-color: var(--color-bgdown);
+    background-color: var(--color-accent);
 
+    @media (max-width: 1536px){
+        height: 90vh;
+    }
+
+    @media screen and (max-width: 768px){
+        height: 100vh;
+    }
+
+    
     &__container { 
+        display: flex;
+        justify-content: space-between;
+        margin-top: 5rem;
 
+        @media (max-width: 1536px){
+            margin-top: 1rem;
+        }
+        
         &_submit , &_socials {
-            height: 55%;
-            position: absolute;
-            top: 30%;
+            height: 35rem;
             padding: 1rem 0;
-            filter: drop-shadow(0 5px 20px var(--color-blue));
+            box-shadow: 5px 5px 30px 20px var(--color-bright);
             padding: 2rem 3rem;
         }
-
+        
         &_submit { 
-            background-color: var(--color-bgup);
-            width: 60%;
-            border-radius: 0 30px 30px 0;
+            background-color: var(--color-neutral);
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             align-items: flex-end;
+            width: 60%;
             
             &-subtittle {
                 font-size: 36px;
-                color: blanchedalmond;
+                color: var(--color-dark);
                 font-family: var(--font-family);
                 padding: 0 2rem;
             }
-
+            
             &--form {
                 display: flex;
                 flex-direction: column;
                 align-items: flex-end;
                 
-
+                
                 &-name, &-mail, &-field {
                     font-size: 20px;
                     padding: 1rem;
@@ -44,12 +57,12 @@
                     margin: .5rem;
                     border-radius: 20px;
                     font-weight: 600;
-
+                    
                     &::placeholder {
-                        color: var(--color-blue);
+                        color: var(--color-accent);
                         opacity: 80%;
                     }
-
+                    
                 }
                 
                 &-button {
@@ -59,64 +72,155 @@
                     font-size: 20px;
                     border-radius: 30px;
                     border: none;
-                    background-color: rgba(54, 23, 45, 0.6);
+                    background-color: var(--color-accent);
                     cursor: pointer;
-                    color: var(--color-subtext);
+                    color: var(--color-dark);
                     font-family: var(--font-family);
-                    font-weight: 100;
-                    box-shadow: 3px 7px 10px #4b14f6;
-
+                    font-weight: 400;
+                    box-shadow: 3px 7px 10px var(--color-bright);
+                    
                     &:hover {
                         animation: rotate 0.7s ease-in-out both;
                     }
                 }   
-
+                
                 &-done {
                     display: flex;
                     align-items: center;
                 }
             }
         }
-
+        
         &_socials {
-            background-color: rgb(80, 1, 54);
-            width: 30%;
-            right: 0;
-            border-radius: 30px 0 0 30px;
+            background-color: var(--color-dark);
             display:flex;
-
+            width: 30%;
+            
             &-info { 
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 flex: 3;
-
+                
                 p {
-                    color: blanchedalmond;
+                    color: var(--color-light);
                     font-family: var(--font-family);
-                    font-size: 24px;
+                    font-size: 22px;
                     display: flex;
                     align-items: center;
                     margin: 1rem 0;
-
+                    
                     span {
                         padding-right: .5rem
                     };
                 }
             }
-
-
+            
+            
             &-links{
                 flex: 1;
                 padding-top: 2rem;
             }
         }
+
+        @media (max-width: 1336px) {
+
+            &_socials {
+                &-info {
+                    flex-direction: row;
+                    padding-top: 3rem;
+                    padding-right: 2rem;
+                    & p {
+                        writing-mode: tb-rl;
+                    }
+                }
+            }
+        }
+        
+        @media (max-width: 1024px) {
+            flex-direction: column;
+            position: relative;
+            justify-content: flex-start;
+            
+            &_submit {
+                width: 80%;
+            }
+            
+            &_socials {
+                height: 7rem;
+                width: 100%;
+                //position: relative;
+                box-shadow: 2px 2px 20px 10px var(--color-bright);
+                
+                &-info {
+                    padding: 0;
+                    & p {
+                        writing-mode: horizontal-tb;
+                    }
+                }
+                
+                &-links {
+                    position: absolute;
+                    top: 0;
+                    right: 0rem;
+                    
+                }
+            }
+        }
+
+        @media screen and (max-width: 768px){
+            padding-top: 3rem;
+            
+            &_submit {
+                padding: 1rem 1rem;
+                height: 100%;
+                width: 70%;
+
+                &-subtittle {
+                    font-size: 20px;
+                    padding: 0 1rem;
+                }
+
+                &--form {
+                    &-name, &-mail, &-field {
+                        font-size: 12px;
+                        width: 200px;
+                        padding: .5rem;
+                    }
+
+                    &-button {
+                        padding: .5rem .5rem;
+                        margin: .5rem;
+                        width: 5rem;
+                        font-size: 12px;
+                    }
+                }
+
+            }
+            &_socials {
+                width: 70%;
+
+                &-info {
+                    flex-direction: column;
+
+                    p {
+                        font-size: 10px;
+                        margin: 0;
+                    }
+                }
+            }
+        }
     }
+
 }
 
 .result-text {
-    color: blanchedalmond;
+    color: var(--color-dark);
     font-family: var(--font-family);
-    font-size: 22px;
+    font-size: 20px;
+
+    @media screen and (max-width: 768px){
+        font-size: 10px;
+    }
 }
 
