--- a/src/containers/header/header.scss
+++ b/src/containers/header/header.scss
@@ -1,46 +1,46 @@
 .page {
     
-
     &__header {
         display: flex;
         flex-wrap: wrap;
-        background-image: url(../../assets/bg.svg);
+        //background-image: url(../../assets/bg.svg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: bottom;
-        height: 95vh;
-
+        height: 80vh;
+        
         &-content {
             flex: 4;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             justify-content: flex-start;
-
+            padding-top: 5rem;
+            padding-left: 2rem;
+            
             &_text{
-                color: var(--color-text);
+                color: var(--color-dark);
                 font-family: var(--font-family);
-
+                
                 &-intro {
                     font-size: 3rem;
                     font-weight: 200;
                 }
-
+                
                 &-main {
                     font-family: var(--font-family);
                     font-size: 10rem;
                     letter-spacing: 3px;
                     font-weight: 600;
-                    padding: 1rem 0;
                 }
-
+                
                 &-description {
                     font-size: 3rem;
                     font-weight: 100;
-                    color: var(--color-subtext);
+                    color: var(--color-dark);
                 }
             }
-
+            
             &_button {
                 padding: 1rem 2rem;
                 width: 20rem;
@@ -48,29 +48,68 @@
                 font-size: 2rem;
                 border-radius: 30px;
                 border: none;
-                background-color: rgba(54, 23, 45, 0.6);
+                background-color: var(--color-neutral-alpha);
                 cursor: pointer;
-                color: var(--color-subtext);
+                color: var(--color-dark);
                 font-family: var(--font-family);
-                font-weight: 100;
-                box-shadow: 3px 7px 10px #4b14f6;
-
+                font-weight: 500;
+                box-shadow: 3px 7px 10px var(--color-bright);
+                
                 &:hover {
                     animation: rotate 0.7s ease-in-out both;
                 }
             }
+            
         }
+        
+        @media (max-width: 1336px) {
+            height: 60vh;
 
-        &-image {
-            flex: 2;
-
-            img {
-                //border: white solid 3px;
-                border-radius: 30%;
-
+            &-content {
+                &_text {
+                    &-main {
+                        font-size: 7rem;
+                    }
+                }
             }
         }
 
+        @media (max-width: 1024px) {
+            &-content {
+                &_text {
+                    &-main {
+                        font-size: 5rem;
+                    }
+                }
+            }
+        }
+
+        @media screen and (max-width: 768px){
+            height: 70vh;
+
+            &-content {
+                padding: 3rem 2rem;
+
+                &_text {
+                    &-intro {
+                        font-size: 2rem;
+                    }
+
+                    &-main {
+                        font-size: 3rem;
+                    }
+                    &-description {
+                        font-size: 2rem;
+                        font-weight: 100;
+                    }
+                }
+                &_button{
+                    padding: .5rem 0;
+                    width: 10rem;
+                    font-size: 1rem;
+                }
+            }
+        }
     }
 }
 
