--- a/src/containers/projects/projects.scss
+++ b/src/containers/projects/projects.scss
@@ -1,54 +1,138 @@
 .projects {
     height: 100vh;
     position: relative;
-    background-color: var(--color-bgdown);
+    background-color: var(--color-accent);
 
-
+    
     &__container {
-        background-color: var(--color-bgup);
+        background-color: var(--color-light);
+        filter: brightness(90%);
         width: 100%;
         position: absolute;
-        top: 30%;
+        top: 26%;
         padding: 1rem 0;
-        filter: drop-shadow(0 4px 20px var(--color-blue));
+        //filter: drop-shadow(0 4px 20px var(--color-blue));
+        box-shadow: 5px 5px 30px 20px var(--color-bright);
         
         &_card {
-            //border: 3px var(--color-blue) solid;
-            border-radius: 30px;
             padding: 2rem;
             width: 100%;
+            height: 550px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            position: relative;
             
-
             & img{
-               // border: 3px var(--color-blue) solid;
+                // border: 3px var(--color-blue) solid;
                 width: 100%;
+                height: 200px;
                 cursor: pointer;
-                box-shadow: 2px 4px 10px #4c14f6c4;
+                box-shadow: 5px 5px 20px 7px var(--color-bright);
             }
-
+            
             &-text{
                 font-size: 20px;
                 font-family: var(--font-family);
-                color: var(--color-text);
+                color: var(--color-dark);
                 padding: 1rem 0;
+                height: 200px;
             }
+            
+            &-view {
+                text-align: center;
+                
+                & button {
+                    padding: .5rem .7rem;
+                    margin: 0 .4rem;
+                    width: 6.5rem;
+                    font-size: 20px;
+                    border-radius: 30px;
+                    border: none;
+                    background-color: var(--color-accent);
+                    cursor: pointer;
+                    color: var(--color-dark);
+                    font-family: var(--font-family);
+                    font-weight: 600;
+                    box-shadow: 3px 7px 10px var(--color-bright);
+                    
+                    &:hover {
+                        animation: rotate 0.7s ease-in-out both;
+                    }
+                }
+                
+            }
+        }
+    }
 
-            & button {
-                padding: .5rem .7rem;
-                margin: 0 .4rem;
-                width: 6.5rem;
-                font-size: 20px;
-                border-radius: 30px;
-                border: none;
-                background-color: rgba(54, 23, 45, 0.6);
-                cursor: pointer;
-                color: var(--color-subtext);
-                font-family: var(--font-family);
-                font-weight: 100;
-                box-shadow: 3px 7px 10px #4b14f6;
+    @media (max-width: 1536px){
+        &__container{
+            box-shadow: 2px 2px 20px 10px var(--color-bright);
+            &_card {
+                padding: 2rem;
 
-                &:hover {
-                    animation: rotate 0.7s ease-in-out both;
+                &-text {
+                    font-size: 18px;
+                }
+                &-view {
+                    & button {
+                        padding: .5rem 0;
+                        font-size: 18px;
+                        width: 5rem;
+                        margin: 0;
+                    }
+                }
+            }
+        }
+    }
+
+    @media (max-width: 1336px) {
+        height: 80vh;
+
+        &__container{
+            box-shadow: 2px 2px 20px 10px var(--color-bright);
+            &_card {
+                padding: 1rem;
+
+                &-text {
+                    font-size: 18px;
+                }
+                &-view {
+                    & button {
+                        padding: .5rem 0;
+                        font-size: 18px;
+                        width: 5rem;
+                        margin: 0;
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: 768px){
+        height: 100vh;
+
+        &__container{
+            &_card {
+                padding: 1rem;
+                height: 400px;
+
+                &-text {
+                    font-size: 12px;
+                    height: 150px;
+                }
+                &-view {
+                    padding-bottom: 1rem;
+                    & button {
+                        padding: .5rem 0;
+                        font-size: 8px;
+                        width: 3rem;
+                        margin: 0;
+                    }
+                }
+
+                img {
+                    height: 100px;
                 }
             }
         }
