--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -6,7 +6,7 @@
     align-items: center;
     background-color: var(--color-dark);
     filter: brightness(140%);
-    box-shadow: 0px -1px 30px 5px var(--color-bright);
+    box-shadow: 0 1px 30px 5px var(--color-bright);
     padding: 1.5rem 6rem;
     
         &-links {
@@ -50,41 +50,39 @@
         }
 
         &-menu {
-            margin-left: 1rem;
-            display: none;
-            position: relative;
-
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 2.8rem 3rem;
+            visibility: hidden;
+            
             & svg {
                 cursor: pointer;
+                margin: 1rem;
             }
-
+            
             &_container {
-                display: flex;
-                justify-content: flex-end;
-                align-items: flex-end;
-                flex-direction: column;
-                text-align: end;
-                background: var(--color-menu);
+                background: var(--color-bright);
                 backdrop-filter: blur(5px);
+                margin-top: 5px;
+                margin-right: 20%;
                 padding: 2rem;
-                position: absolute;
-                top: 40px;
-                right: -40px;
-                margin-top: 1rem;
-                min-width: 95vw;
-                border-radius: 5px;
-                box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
+                box-shadow: 5px 5px 30px 10px var(--color-dark);
 
                 & p {
-                    color: #fff;
+                    color: var(--color-dark);
                     font-family: var(--font-family);
-                    font-weight: 500;
-                    font-size: 18px;
-                    line-height: 25px;
-                    text-transform: capitalize;
-                    margin: 0 1rem;
+                    font-weight: 800;
+                    font-size: 20px;
                     cursor: pointer;
-                    padding: 5px;
+                    padding: 1rem;
+
+                    & a {
+                        text-transform: uppercase;
+                    }
                 }
             }
         }
@@ -92,32 +90,7 @@
     }
 }
 
-@media screen and (max-width: 550px){
-    .page {
-        &__navbar {
-            padding: 2rem;
-
-            &-menu {
-                margin: 0;
-
-                &_container {
-                    top: 60px;
-                }
-            }
-        }
-    }    
-}
-
-@media screen and (max-width: 770px){
-    .page {
-        &__navbar {
-            padding: 2rem 3rem;
-            
-        }
-    }    
-}
-
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 768px){
     .page {
         &__navbar {
             &-links{
@@ -127,8 +100,34 @@
             }
             &-menu {
                 display: flex;
+                visibility: visible;
+                padding: 1rem;
+                
+                &_container {
+                    margin-right: 40%;
+                    margin-top: 0;
+                }
             }
         }
-    }
-    
+    }   
+}
+
+@media screen and (max-width: 550px){
+    .page {
+        &__navbar {
+            height: 15vh;
+            padding: 3rem 2rem .5rem 2rem;
+            
+            &-links {
+                justify-content: center;
+                    &_logo {
+                        margin: 0;
+                    }
+            }
+
+            &-menu {
+                padding: 2rem;
+            }
+        }
+    }    
 }
