--- a/src/components/feature/feature.scss
+++ b/src/components/feature/feature.scss
@@ -13,12 +13,12 @@
 
     h1 {
         font-size: 56px;
-        color: var(--color-dark);
+        color: var(--color-light);
     }
 
     h3 {
         font-size: 28px;
-        color: var(--color-dark);
+        color: var(--color-neutral);
         font-weight: 400;
         margin-bottom: 1rem;
     }
@@ -35,7 +35,7 @@
             font-size: 2rem;
         }
 
-        h3 {
+        h3 { 
             font-size: 1rem;
         }
 
