--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -5,9 +5,9 @@
     justify-content: space-between;
     align-items: center;
     background-color: var(--color-dark);
-    filter: brightness(140%);
-    box-shadow: 0 1px 30px 5px var(--color-bright);
-    padding: 1.5rem 6rem;
+    filter: brightness(120%);
+    box-shadow: 0 1px 30px 5px var(--color-dark);
+    padding: 1.5rem 15rem;
     
         &-links {
             display: flex;
@@ -28,10 +28,10 @@
             &_container {
                 display: flex;
                 flex-direction: row;
-                margin-right: 4rem;
+                //margin-right: 4rem;
 
                 & p {
-                    color: var(--color-neutral);
+                    color: var(--color-light);
                     font-family: var(--font-family);
                     font-weight: 500;
                     font-size: 26px;
@@ -90,6 +90,14 @@
     }
 }
 
+@media screen and (max-width: 1024px){
+    .page {
+        &__navbar {
+            padding: 1rem 5rem;
+        }
+    }
+}
+
 @media screen and (max-width: 768px){
     .page {
         &__navbar {
@@ -130,4 +138,4 @@
             }
         }
     }    
-}
+} 
