--- a/src/components/cta/cta.scss
+++ b/src/components/cta/cta.scss
@@ -15,7 +15,7 @@
             justify-content: space-evenly;
             background-color: var(--color-dark);
             //filter: drop-shadow(0 5px 20px var(--color-bright));
-            box-shadow: 5px 5px 30px 10px var(--color-bright);
+            //box-shadow: 5px 5px 30px 10px var(--color-dark);
             
             button {
                 padding: 1rem 2rem;
@@ -23,12 +23,12 @@
                 font-size: 22px;
                 border-radius: 30px;
                 border: none;
-                background-color: var(--color-neutral);
+                background-color: var(--color-accent);
                 cursor: pointer;
-                color: var(--color-dark);
+                color: var(--color-neutral);
                 font-family: var(--font-family);
                 font-weight: 400;
-                box-shadow: 3px 7px 10px var(--color-bright);
+                //box-shadow: 3px 7px 10px var(--color-bright);
                 
                 &:hover {
                     animation: rotate 0.7s ease-in-out both;
@@ -53,21 +53,13 @@
         right: 0;
         align-items: flex-start;
     }
-
-    @media (max-width: 1536px){
-        height: 45vh;
-    }
     
-    @media (max-width: 1336px) {
-        height: 20vh;
-
-        &_contact {
-            box-shadow: 2px 2px 20px 10px var(--color-bright);
-        }
+    @media screen and (max-width: 1366px){
+        height: 30vh;
     }
 
-    @media (max-width: 1024px){
-        height: 30vh;
+    @media screen and (max-width: 1024px){
+        height: 55vh;
     }
 
     @media screen and (max-width: 768px){
@@ -88,7 +80,7 @@
             }
         }
 
-        &_resume {
+        &_resume { 
             h3 {
                 text-align: end;
             }
