--- a/src/components/navigation/nav.scss
+++ b/src/components/navigation/nav.scss
@@ -23,7 +23,7 @@
                 margin: 1rem;
                 background-color: var(--color-bright);
                 border-radius: 30px;
-                box-shadow: 2px 3px 5px var(--color-light);
+                //box-shadow: 2px 3px 5px var(--color-dark);
 
                 &:hover {
                     background-color: var(--color-dark);
@@ -49,7 +49,7 @@
                 border-radius: 30px;
                 box-shadow: 0 5px 10px var(--color-bright);
                 background-color: var(--color-dark);
-                color: var(--color-light);
+                color: var(--color-neutral);
                 transition: transform 1s cubic-bezier(0.58,-0.78, 0, 1.79);
             }
         }
