--- a/src/containers/about/about.scss
+++ b/src/containers/about/about.scss
@@ -11,7 +11,7 @@
         flex-wrap: wrap;
         background-color: var(--color-light);
         filter: brightness(90%);
-        box-shadow: 5px 5px 30px 10px var(--color-bright);
+        //box-shadow: 5px 5px 30px 10px var(--color-dark);
         font-size: 30px;
         font-weight: 500;
         color: var(--color-dark);
@@ -20,7 +20,7 @@
         position: relative;
         
         &_info {
-            flex: 4;
+            flex: 3;
             text-align: start;
             text-align: justify;
             padding: 4rem 2rem 4rem 4rem;
@@ -29,23 +29,22 @@
         &_image {
             flex: 1;
             text-align: center;
-            height: 600px;
             
             img {
                 height: 600px;
-                padding: 2rem 4rem;
+                padding: 3rem 3rem 3rem 1rem;
             }
         }
         
         &_skills {
-            flex: 2;
-            padding: 4rem 2rem;
+            flex: 1;
+            padding: 4rem 1rem;
             
             &-container {
                 text-align: start;
             }
             
-        }
+        } 
     }
     
     ul {
@@ -67,13 +66,13 @@
         }
     }
 
-    @media (max-width: 1336px) {
-        height: 75vh;
+    @media screen and (max-width: 1366px){
+        height: auto;
     
         &__box {
             font-size: 24px;
             margin-top: 2rem;
-            padding: 1rem 0.5rem;
+            padding: 2rem 4rem;
 
             &_info, &_skills{
                 padding: 2rem 1rem;
@@ -95,8 +94,21 @@
         }
     }
 
-    @media (max-width: 1024px){
-        height: 90vh;
+    @media screen and (max-width: 1024px){
+        height: auto;
+
+        &__box {
+            font-size: 18px;
+            &_image {
+                flex: 1;
+                text-align: center;
+                
+                img {
+                    height: 350px;
+                    padding: 2rem 1rem 1rem 1rem;
+                }
+            }
+        }
     }
 
     @media screen and (max-width: 768px){
@@ -106,14 +118,19 @@
             font-size: 1rem;
 
             &_info, &_skills{
-                padding: 1rem 1rem;
+                padding: 1rem .5rem;
+            }
+            
+            &_info {
+                flex: 2;
+                padding-right: 1rem;
             }
 
             &_image {
                 height: 100%;
                 img {
                     padding: 0 1rem;
-                    height: 300px;
+                    height: 250px;
                 }
             }
         }
