--- a/src/index.scss
+++ b/src/index.scss
@@ -8,15 +8,15 @@
     --font-family: 'Rajdhani', sans-serif;
     --font-header: 'Amatic SC', cursive;
 
-    --color-light: #FCE0D1;
-    --color-light-alpha: rgba(252, 224, 209, 0.7);
-    --color-dark: #193D37;
-    --color-bright: #E84A5F;
-    --color-bright-alpha: rgba(232, 74, 95, 0.6);
-    --color-accent: #80B68F;
-    --color-accent-alpha: rgba(128, 182, 143, 0.6);
-    --color-neutral: #ffc3ac;
-    --color-neutral-alpha: rgba(255, 195, 172, 0.8);
+    --color-light: #F0F0F0;
+    --color-light-alpha: rgba(240, 240, 240, 0.7);
+    --color-dark: #272727;
+    --color-bright: #FA3839;
+    --color-bright-alpha: rgba(245, 184, 1, 0.50);
+    --color-accent: #4e4e4e;
+    --color-accent-alpha: rgba(83, 83, 83, 0.4);
+    --color-neutral: #ff9a9a;
+    --color-neutral-alpha: rgb(235, 205, 104);
 
     --bg-dark: #000;
     --bg-light: #ccc;
