--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -56,12 +56,11 @@
             position: absolute;
             top: 0;
             right: 0;
-            padding: 2.8rem 3rem;
             visibility: hidden;
             
             & svg {
                 cursor: pointer;
-                margin: 1rem;
+                //margin: 1rem;
             }
             
             &_container {
@@ -89,11 +88,26 @@
 
     }
 }
+@media screen and (max-width: 1366px){
+    .page {
+        &__navbar {
+            padding: 1.5rem 7rem;
+        }
+    }
+}
 
 @media screen and (max-width: 1024px){
     .page {
         &__navbar {
             padding: 1rem 5rem;
+
+            &-links {
+                &_container {
+                    & p {
+                        font-size: 20px;
+                    }
+                }
+            };
         }
     }
 }
@@ -101,6 +115,8 @@
 @media screen and (max-width: 768px){
     .page {
         &__navbar {
+            padding: 1rem 2rem;
+
             &-links{
                 &_container {
                     display: none;
@@ -109,22 +125,27 @@
             &-menu {
                 display: flex;
                 visibility: visible;
-                padding: 1rem;
+                padding: 1rem 1.7rem;
                 
                 &_container {
                     margin-right: 40%;
                     margin-top: 0;
+                    padding: 3rem;
+                }
+
+                & svg {
+                    
                 }
             }
         }
     }   
 }
 
-@media screen and (max-width: 550px){
+@media screen and (max-width: 600px){
     .page {
         &__navbar {
-            height: 15vh;
-            padding: 3rem 2rem .5rem 2rem;
+            height: auto;
+            padding: 3rem 2rem 1rem 1rem;
             
             &-links {
                 justify-content: center;
@@ -134,7 +155,7 @@
             }
 
             &-menu {
-                padding: 2rem;
+                padding: 3rem 1.5rem;
             }
         }
     }    
