--- a/src/containers/footer/footer.scss
+++ b/src/containers/footer/footer.scss
@@ -59,7 +59,7 @@
     }
 
     @media screen and (max-width: 1366px){
-        height: 16vh;
+        height: auto;
     }
     
     @media screen and (max-width: 1024px){
@@ -70,6 +70,7 @@
             &-nav{
                 width: 70%;
                 padding: .5rem 5rem;
+
                 & p{
                     font-size: 18px;
                 }
@@ -87,7 +88,8 @@
         &__up {
             padding: .5rem;
             &-nav{
-                width: 60%;
+                width: 70%;
+                padding: .5rem 2rem;
                 & p{
                     font-size: 14px;
                 }
@@ -103,6 +105,18 @@
         &__down {
             p {
                 font-size: 14px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 600px){
+        &__up {
+            &-nav {
+                padding: .5rem 1rem;
+
+                & p{
+                    font-size: 10px;
+                }
             }
         }
     }
