--- a/src/containers/contacts/contacts.scss
+++ b/src/containers/contacts/contacts.scss
@@ -67,8 +67,8 @@
                     font-weight: 600;
                     
                     &::placeholder {
-                        color: var(--color-accent);
-                        opacity: 70%;
+                        //color: var(--color-accent);
+                        //opacity: 70%;
                     }
                     
                 }
