--- a/src/containers/contacts/contacts.scss
+++ b/src/containers/contacts/contacts.scss
@@ -67,7 +67,7 @@
                     font-weight: 600;
                     
                     &::placeholder {
-                        color: var(--color-accent);
+                        color: black;
                         opacity: 70%;
                     }
                     
